fix: black color span for best lap time

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         font-family: "Consolas", monospace;
       }
       #best-lap span {
-        color: black;
+        color: white;
         font-weight: 700;
       }
 
