--- a/index.html
+++ b/index.html
@@ -7,343 +7,10 @@
       href="https://fonts.googleapis.com/css2?family=Carter+One&family=Luxurious+Roman&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8" />
     <title>F1 Night Circuit</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        overflow: hidden;
-        font-family:
-          "Carter One",
-          system-ui,
-          -apple-system,
-          BlinkMacSystemFont,
-          "Segoe UI",
-          Roboto,
-          Oxygen,
-          Ubuntu,
-          Cantarell,
-          "Open Sans",
-          "Helvetica Neue",
-          sans-serif;
-        background: #000;
-      }
-
-      /* === Controls Guide (bottom-left) === */
-      #controls-guide {
-        position: fixed;
-        bottom: 24px;
-        left: 24px;
-        background: rgba(10, 10, 15, 0.75);
-        color: #eee;
-        padding: 14px 18px;
-        border-radius: 12px;
-        z-index: 100;
-        backdrop-filter: blur(12px);
-        pointer-events: none;
-        line-height: 1.9;
-        font-size: 12px;
-        box-shadow: 0 4px 24px rgba(0, 0, 0, 0.5);
-        border: 1px solid rgba(255, 255, 255, 0.06);
-      }
-      #controls-guide h3 {
-        margin: 0 0 6px 0;
-        font-size: 13px;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        color: #e53935;
-        font-weight: 700;
-      }
-      .key {
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.1);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        border-radius: 4px;
-        padding: 1px 8px;
-        font-family: "Consolas", monospace;
-        font-size: 11px;
-        min-width: 22px;
-        text-align: center;
-        margin-right: 4px;
-        color: #fff;
-      }
-
-      /* === Speedometer HUD (bottom-right) === */
-      #speed-hud {
-        position: fixed;
-        bottom: 24px;
-        right: 24px;
-        background: rgba(10, 10, 15, 0.8);
-        color: #fff;
-        padding: 18px 24px 14px;
-        border-radius: 14px;
-        z-index: 100;
-        backdrop-filter: blur(12px);
-        pointer-events: none;
-        min-width: 180px;
-        text-align: center;
-        box-shadow: 0 4px 24px rgba(0, 0, 0, 0.5);
-        border: 1px solid rgba(255, 255, 255, 0.06);
-      }
-      .speed-number {
-        font-size: 56px;
-        font-weight: 800;
-        letter-spacing: -3px;
-        line-height: 1;
-        font-family: "Consolas", "Courier New", monospace;
-        text-shadow: 0 0 20px rgba(229, 57, 53, 0.4);
-      }
-      .speed-unit {
-        font-size: 12px;
-        color: #888;
-        margin-top: 2px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-      }
-
-      /* Speed bar */
-      .bar-container {
-        width: 100%;
-        height: 4px;
-        background: rgba(255, 255, 255, 0.08);
-        border-radius: 2px;
-        margin-top: 10px;
-        overflow: hidden;
-      }
-      .bar-fill {
-        height: 100%;
-        width: 0%;
-        border-radius: 2px;
-        transition:
-          width 0.08s linear,
-          background 0.3s ease;
-      }
-      #speed-bar-fill {
-        background: #4caf50;
-      }
-      #rpm-bar-fill {
-        background: #4caf50;
-      }
-
-      /* RPM label */
-      .bar-label {
-        font-size: 9px;
-        color: #666;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        margin-top: 6px;
-        text-align: left;
-      }
-
-      /* Gear + DRS row */
-      .hud-row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        margin-top: 10px;
-      }
-      #gear-indicator {
-        font-size: 28px;
-        font-weight: 800;
-        color: #fff;
-        background: rgba(255, 255, 255, 0.06);
-        padding: 2px 16px;
-        border-radius: 6px;
-        font-family: "Consolas", monospace;
-        min-width: 44px;
-      }
-      #drs-indicator {
-        font-size: 11px;
-        font-weight: 700;
-        color: #555;
-        background: rgba(255, 255, 255, 0.04);
-        padding: 4px 10px;
-        border-radius: 4px;
-        letter-spacing: 1px;
-        transition: all 0.2s ease;
-      }
-      #drs-indicator.active {
-        color: #76ff03;
-        background: rgba(118, 255, 3, 0.15);
-        box-shadow: 0 0 12px rgba(118, 255, 3, 0.3);
-      }
-
-      /* === Center message === */
-      #center-msg {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%) scale(0.8);
-        font-size: 52px;
-        font-weight: 900;
-        color: #fff;
-        text-shadow:
-          0 4px 30px rgba(229, 57, 53, 0.6),
-          0 0 60px rgba(0, 0, 0, 0.5);
-        z-index: 200;
-        pointer-events: none;
-        opacity: 0;
-        transition:
-          opacity 0.5s ease,
-          transform 0.5s ease;
-        font-family: "Segoe UI", Arial, sans-serif;
-        letter-spacing: 4px;
-      }
-
-      /* === Lap Timer (top center) === */
-      #lap-timer-hud {
-        position: fixed;
-        top: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 100;
-        pointer-events: none;
-        text-align: center;
-      }
-      #lap-timer {
-        font-size: 36px;
-        font-weight: 800;
-        color: #fff;
-        font-family: "Consolas", "Courier New", monospace;
-        letter-spacing: 2px;
-        text-shadow:
-          0 0 20px rgba(229, 57, 53, 0.5),
-          0 2px 8px rgba(0, 0, 0, 0.8);
-      }
-      #lap-label {
-        font-size: 10px;
-        color: #888;
-        letter-spacing: 3px;
-        text-transform: uppercase;
-        margin-bottom: 2px;
-      }
-      #best-lap {
-        font-size: 11px;
-        color: #aaa;
-        margin-top: 4px;
-        letter-spacing: 1px;
-        font-family: "Consolas", monospace;
-      }
-      #best-lap span {
-        color: white;
-        font-weight: 700;
-      }
-
-      /* === Lap Result popup === */
-      #lap-result {
-        position: fixed;
-        top: 38%;
-        left: 50%;
-        transform: translateX(-50%) scale(0.7);
-        z-index: 250;
-        pointer-events: none;
-        text-align: center;
-        opacity: 0;
-        transition:
-          opacity 0.35s ease,
-          transform 0.35s cubic-bezier(0.34, 1.56, 0.64, 1);
-        background: rgba(5, 5, 18, 0.88);
-        border: 1px solid rgba(255, 255, 255, 0.08);
-        border-radius: 18px;
-        padding: 28px 48px 22px;
-        backdrop-filter: blur(16px);
-        box-shadow:
-          0 8px 40px rgba(0, 0, 0, 0.7),
-          0 0 60px rgba(168, 85, 247, 0.15);
-      }
-      #lap-result.show {
-        opacity: 1;
-        transform: translateX(-50%) scale(1);
-      }
-      #lap-result .r-label {
-        font-size: 11px;
-        color: #888;
-        letter-spacing: 4px;
-        text-transform: uppercase;
-        margin-bottom: 8px;
-      }
-      #lap-result .r-time {
-        font-size: 54px;
-        font-weight: 900;
-        color: #fff;
-        font-family: "Consolas", monospace;
-        letter-spacing: 2px;
-        line-height: 1;
-        text-shadow: 0 0 30px rgba(229, 57, 53, 0.5);
-      }
-      #lap-result .r-time.purple {
-        color: red;
-        text-shadow: 0 0 30px rgba(217, 70, 239, 0.6);
-      }
-      #lap-result .r-best {
-        font-size: 12px;
-        color: red;
-        margin-top: 10px;
-        letter-spacing: 1px;
-        font-family: "Consolas", monospace;
-      }
-      #lap-result .r-count {
-        font-size: 12px;
-        color: #666;
-        margin-top: 4px;
-        letter-spacing: 2px;
-      }
-
-      /* === Loading overlay === */
-      #loading {
-        position: fixed;
-        inset: 0;
-        background: #0a0a1a;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        z-index: 999;
-        transition: opacity 0.8s ease;
-        color: #fff;
-        font-size: 18px;
-        font-weight: 300;
-        letter-spacing: 3px;
-      }
-      #loading .spinner {
-        width: 40px;
-        height: 40px;
-        border: 3px solid rgba(255, 255, 255, 0.15);
-        border-top-color: #e53935;
-        border-radius: 50%;
-        animation: spin 0.8s linear infinite;
-        margin-bottom: 20px;
-      }
-      #loading .load-progress-bar {
-        width: 200px;
-        height: 3px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 2px;
-        margin-top: 16px;
-        overflow: hidden;
-      }
-      #loading .load-progress-bar .fill {
-        height: 100%;
-        width: 0%;
-        background: #e53935;
-        border-radius: 2px;
-        transition: width 0.2s ease;
-      }
-      @keyframes spin {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-      #loading.hidden {
-        opacity: 0;
-        pointer-events: none;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Loading Screen -->
