fix: rename title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8" />
-    <title>F1 Night Circuit</title>
+    <title>Nascar Night Circuit</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
